--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    font-family: "Poppins", serif;
     line-height: 1.5;
     font-weight: 400;
 
@@ -15,6 +15,10 @@
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+.nav-brand {
+    font-family: "Silkscreen", sans-serif;
 }
 
 @media (prefers-color-scheme: light) {
