--- a/src/index.css
+++ b/src/index.css
@@ -19,11 +19,9 @@
 }
 
 .card-backlight:hover {
-    box-shadow: 0px 0px 40px -5px rgba(255, 255, 255, 1);
-    transition: all 0.2s ease-in-out;
+    box-shadow: 0px 0px 30px 0px rgb(117, 116, 116);
 }
 
 .game-card:hover .card-image {
-    opacity: 0.75;
     transform: scale(1.05);
 }
